--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nest-typescript-starter",
+  "name": "tic-tac-toe-be",
   "private": true,
   "version": "1.0.0",
-  "description": "Nest TypeScript starter repository",
+  "description": "Backend for Tic Tac Toe game.",
   "license": "MIT",
   "scripts": {
     "build": "nest build",
@@ -20,8 +20,11 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "mongoose": "^8.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
