--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "@nestjs/platform-express": "^10.0.0",
     "mongoose": "^8.1.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "@nestjs/cli": "^10.0.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.1",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.0",
     "@swc/cli": "^0.1.62",
